<resources>
    <string name="app_name">CakeApp</string>
    <string name="Logintoyouaccount">Login to you account</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="NewhereCreateanaccount">New here? Create an account</string>
    <string name="login">Log In</string>

    <string name="Createyouraccount">Create your account</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="signup">Sign Up</string>
    <string name="AlreadyhaveanaccountLoginhere">Already have an account Login here</string>

    <string name="cakename">Cake Name</string>
    <string name="name">Name</string>
    <string name="time">Time</string>

    <string name="Home">Home</string>
    <string name="Account">Account</string>
    <string name="Shop">Shop</string>
    <string name="Followus">Follow us</string>
    <string name="TestSee">Test and See</string>
    <string name="Logout">Logout</string>
    <string name="KHirgeto">K Hirgeto</string>
    <string name="email">KKhir001@gmail.com</string>
    <string name="setting">Setting</string>

    <string name="Uploadprofilephoto">Upload profile photo</string>
    <string name="UpdateAccount">Update Account</string>

    <string name="loginERROR">Can not login, please check your name and password</string>
    <string name="nullERROR">It is null</string>
    <string name="popularCake">Popular Cakes</string>

    <string name="Spring">Spring</string>
    <string name="Summer">Summer</string>
    <string name="Fall">Fall</string>
    <string name="Holiday">Holiday</string>
    <!--Sprng summer cake-->
    <string name="upsidedown">UpsideDown Pineapple Cake</string>
    <string name="upsidedowndis">A basic single layer yellow butter cake inverted after baking to reveal a flavor infused glistening mosaic of caramelized canned pineapples.</string>
    <string name="KeyLimePie">Key Lime Pie</string>
    <string name="KeyLimePiedis">Key Lime Pie</string>
    <string name="CoconutCake">Coconut Cake</string>
    <string name="CoconutCakedis">Coconut Cake</string>
    <string name="falvorpund">5 Flavor Pound Cake</string>
    <string name="falvorpunddis">5 Flavor Pound Cake</string>
    <string name="strawberrysortcake">Strawberry Shortcake</string>
    <string name="strawberrysortcakedis">Strawberry Shortcake</string>

    <!--Fall Holiday cake-->
    <string name="carootckae">Carrot Cake</string>
    <string name="carootckaedis">Carrot Cake</string>
    <string name="chocletcake">Double Chocolate Cake</string>
    <string name="chocletcakedis">Double Chocolate Cake</string>
    <string name="redvelvet">Red Velvet Cake</string>
    <string name="redvelvetdis">Red Velvet Cake</string>
    <string name="nyccheescake">New York Cheesecake</string>
    <string name="nyccheescakedis">New York Cheesecake</string>
    <string name="sweetpotatocake">Sweet Potato Cheesecake</string>
    <string name="sweetpotatocakedis">Sweet Potato Cheesecake</string>
    <string name="redvelvetcheescake">Red Velvet Cheesecake</string>
    <string name="redvelvetcheescakedis">Red Velvet Cheesecake</string>
    <string name="bananacake">Banana Cake</string>
    <string name="bananacakedis">Banana Cake</string>
    <string name="Bacardirumcake">Bacardi Rum Cake</string>
    <string name="Bacardirumcakedis">Bacardi Rum Cake</string>

    <string name="ChooseSuze">Choose Size</string>
    <string name="Order">Order Now</string>
    <string name="size">6-inch</string>
    <string name="qty">1</string>

    <string name="hint">Order Note:</string>

    <string name="orderinfo">Order Info</string>
    <string name="ousername">Name: </string>
    <string name="ophone">Phone: </string>
    <string name="oemail">Email: </string>
    <string name="oaddress">Address: </string>
    <string name="ocakename">Cake Name: </string>
    <string name="ocakecost">Cake Cost: </string>
    <string name="otime">Order Time: </string>
    <string name="onote">Order Note: </string>




</resources>