<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".LogInActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="199dp"
                android:layout_height="267dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="425dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/signbg1"
                android:layout_gravity="center"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Logintoyouaccount"
                    android:textColor="@color/exDarkGray"
                    android:textSize="32sp"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/signbg2"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"

                        />
                    <EditText
                        android:id="@+id/snameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Password"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        />
                    <EditText
                        android:id="@+id/spasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"

                        />
                    <EditText
                        android:id="@+id/sphoneET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Email"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        />
                    <EditText
                        android:id="@+id/semailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Address"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        />
                    <EditText
                        android:id="@+id/saddressET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <Button
                        android:id="@+id/signupBTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbg_no_text"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_marginTop="40dp"/>

                    <Button
                        android:id="@+id/loginBTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AlreadyhaveanaccountLoginhere"
                        android:textSize="17sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@color/transparent"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:layout_marginTop="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>





</LinearLayout>