<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/curvebg"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/back"
                android:layout_width="39dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/whiteleftarrow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:letterSpacing="0.2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin = "15dp"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/face"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/KHirgeto"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:src="@drawable/homeic"
            />
        <Button
            android:id="@+id/homeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:textStyle="bold"
            android:textColor="@color/exDarkGray"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="26dp"
            android:src="@drawable/openic"
            android:layout_gravity="center"
            android:layout_marginStart="180dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:src="@drawable/useric"
            />
        <Button
            android:id="@+id/accountBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:textStyle="bold"
            android:textColor="@color/exDarkGray"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="26dp"
            android:src="@drawable/openic"
            android:layout_gravity="center"
            android:layout_marginStart="171dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:src="@drawable/shopic"
            />
        <Button
            android:id="@+id/shopBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shop"
            android:textStyle="bold"
            android:textColor="@color/exDarkGray"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="26dp"
            android:src="@drawable/openic"
            android:layout_gravity="center"
            android:layout_marginStart="171dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:src="@drawable/facebookic"
            />
        <Button
            android:id="@+id/followBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Followus"
            android:textStyle="bold"
            android:textColor="@color/exDarkGray"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="26dp"
            android:src="@drawable/openic"
            android:layout_gravity="center"
            android:layout_marginStart="171dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:src="@drawable/logoutic"
            />
        <Button
            android:id="@+id/logouttBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:textStyle="bold"
            android:textColor="@color/exDarkGray"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="26dp"
            android:src="@drawable/openic"
            android:layout_gravity="center"
            android:layout_marginStart="171dp"
            />
    </LinearLayout>



</LinearLayout>